Thu Sep 30 00:50:44 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c (ip_init): bug fix

	* ext/tk/tkutil.c (get_eval_string_core): accept a Regexp object

	* ext/tk/lib/multi-tk.rb: fix bug on 'exit' operation

	* ext/tk/lib/tk/text.rb: 'tksearch' accepts a Regexp object as a 
	  matting pattern argument

Wed Sep 29 10:58:07 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (sort_by_i): internally used object must not be changed
	  outside.  [ruby-dev:24368]

Mon Sep 27 21:25:12 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_call0): invoke finalizers periodically.

	* gc.c (gc_sweep): defer running finalizers.  [ruby-dev:24354]

	* gc.c (rb_gc_finalize_deferred): run deferred finalizers.

Mon Sep 27 15:01:59 2004  Minero Aoki  <aamine@loveruby.net>

	* parse.y [ripper]: missing ';'.

Mon Sep 27 13:46:45 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* intern.h, struct.c (rb_struct_s_members, rb_struct_members): public
	  accessors.  [ruby-dev:24342]

	* marshal.c (w_object, r_object0): use accessors.

Mon Sep 27 09:14:03 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_delete): comparison may change the capacity.
	  [ruby-dev:24348]

	* array.c (rb_ary_fill): fill should honor length argument.
	  [ruby-dev:24346]

	* array.c (rb_ary_replace): should not use ptr from shared array.
	  [ruby-dev:24345]

	* ext/socket/socket.c (s_accept): don't retry for EWOULDBLOCK.
	  [ruby-talk:113807]

Sun Sep 26 08:05:10 2004  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb: provides {Time,Date,DateTime}#to_{time,date,datetime}.

	* sample/cal.rb: uses getoptlong instead of getopts.

Sat Sep 25 18:39:22 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (flatten): element size might change during comparison.
	  [ruby-dev:24343]

Sat Sep 25 01:52:49 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* struct.c (rb_struct_s_members): wrong call of struct_members.
	  [ruby-dev:24333]
